[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbs-core"
description = "NBS Core Utilities"
authors = [
    { name = "Charles Titus", email = "ctitus@bnl.gov" },
]
requires-python = ">=3.9"
dynamic = ["version"]
readme = "README.md"
keywords = ["bluesky", "nsls-ii", "beamline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]
dependencies = ['tomli ; python_version < "3.11"']

[project.urls]
homepage = "https://github.com/xraygui/nbs-core"

[tool.hatch.version]
source = "vcs"
