[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nbs-core"
description = "NBS Core Utilities"
authors = [
    { name = "Charles Titus", email = "ctitus@bnl.gov" },
]
requires-python = ">=3.9"
dynamic = ["version"]
readme = "README.md"
keywords = ["bluesky", "nsls-ii", "beamline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]
dependencies = ['tomli ; python_version < "3.11"']

[project.urls]
homepage = "https://github.com/xraygui/nbs-core"

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.build.dependencies]
hatch = "*"

[tool.pixi.feature.build.tasks]
build = "hatch build"

[tool.pixi.environments]
build = { features = ["build"], solve-group = "default" }
